# static/swagger.json
@@ -10,11 +10,66 @@
   "consumes": ["application/json"],
   "produces": ["application/json"],
   "paths": {
+    "/login": {
+      "post": {
+        "summary": "User login",
+        "description": "Authenticate using username and password.",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "credentials",
+            "description": "Login credentials",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "type": "string",
+                  "example": "username"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "password"
+                }
+              },
+              "required": ["username", "password"]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Login successful",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "token": {
+                  "type": "string",
+                  "description": "JWT access token"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized - incorrect username or password"
+          },
+          "500": {
+            "description": "Server error."
+          }
+        }
+      }
+    },
     "/upload-csv": {
       "post": {
         "summary": "Upload CSV file link",
         "description": "Uploads a CSV file from a given link and stores/updates data.",
         "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "description": "Bearer token for authorization (format: 'Bearer <token>')",
+            "required": true,
+            "type": "string"
+          },
           {
             "in": "body",
             "name": "request",
@@ -42,7 +97,12 @@
           "500": {
             "description": "Server error."
           }
-        }
+        },
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
       }
     },
     "/data": {
@@ -89,7 +149,7 @@
                 },
                 "filterModel": {
                   "type": "object",
-                  "description": "Object where each key represents a column filter. For example: 'supported_languages'.",
+                  "description": "Object where each key represents a column filter.",
                   "example": {
                     "supported_languages": {
                       "filterType": "array",
@@ -177,7 +237,7 @@
       "type": "apiKey",
       "name": "Authorization",
       "in": "header",
-      "description": "Enter your Bearer token in the format **Bearer &lt;token&gt;**"
+      "description": "Enter your Bearer token in the format **Bearer <token>**"
     }
   }
 }
